# chatBI

./: .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONFIGURATION_GUIDE.md  DUAL_RECALL_STATUS.md  FINAL_TEST_GUIDE.md  FRONTEND_GUIDE.md  IMPLEMENTATION_PLAN.md  INTENT_RECOGNITION_FIX_REPORT.md  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  REAL_DATA_INTEGRATION_SUMMARY.md  START_GUIDE.md  STATUS.md  TEST_GUIDE.md  UPDATE_SUMMARY.md  deep-diagnose.sh  docker-compose.yml  docker-diagnostic.sh  init-postgres.sh  pyproject.toml  requirements.txt  run-production-server.py  start-all-services.sh  start-backend.sh  start-docker.sh  start.sh  test_intent_integration.py  test_results.json  test_root_cause.py  verify-docker.sh  【方案三难点解析】结合语义层的智能问数混合方案核心技术深度设计与MVP实现.md
archive/: TEST_SUMMARY.md  test_results_v2.json
configs/: metrics.yaml
docs/: ACCEPTANCE_REPORT.md  API_REFERENCE.md  ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  INTENT_RECOGNITION_ARCHITECTURE.md  KNOWLEDGE_GRAPH_SUMMARY.md  MQL_SYSTEM_SUMMARY.md  POSTGRESQL_INTEGRATION.md  POSTGRESQL_SUMMARY.md  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  REAL_ALGORITHM_VERIFICATION.md  ROOT_CAUSE_USAGE.md  RUNTIME_TEST_REPORT.md  SECURITY.md  SECURITY_BEST_PRACTICES.md  SECURITY_CHECK_SUMMARY.md  SUMMARY.md  USER_GUIDE_V3.md  intent_recognition_summary.md  phase1_summary.md  phase2_summary.md  phase3_summary.md  roadmap_implementation_plan.md  root_cause_analysis_extension.md  root_cause_analysis_summary.md
docs/archive/: API_DOCUMENTATION.md  API_QUICK_REFERENCE.md  DOCKER.md  DOCKER_FIX.md  FINAL_ACCEPTANCE_REPORT.md  OPTIMIZATION_PLAN.md  POSTGRES_INTEGRATION_STATUS.md  QUICKSTART_TEST.md  QUICK_FIX.md  (+7 more)
frontend/: README.md  README_ACCESS.md  chart_autoviz.js  config.js  dashboard.html  diagnose.html  graph-management-v2.html  graph-management.html  index-backup.html  index.html  index_v3.html  intent-visualization-v2.html  intent-visualization-v2.html.bak  intent-viz-new.html.bak  pipeline-flow.html  start-all-services.sh  stop-all-services.sh  test-api.html  test-simple.html  test_root_cause_frontend.html
monitoring/: README.md
scripts/: acceptance_test.py  batch_import_metrics.py  benchmark.py  check-status.sh  demo-complete-system.sh  ingest_graph_data.py  ingest_metrics_to_qdrant.py  init_graph.py  init_seed_data.py  init_test_data.py  open-dashboard.sh  quick_init_qdrant.py  run_demo.sh  run_demo_safe.sh  run_demo_server.py  run_dev_server.py  run_e2e_test.sh  security_check.sh  start-services.sh  test-zhipu.sh  test_context_manager.py  test_context_merge.py  test_e2e.py  test_federation.py  test_interpreter.py  test_postgres_integration.py  test_production_suite_v2.py  test_prophet.py  test_qdrant_search.py  validate_config.py  verify_advanced_context.py  verify_all.py  verify_drilldown.py  verify_graph_integration.py  verify_vector_integration.py
src/: config.py
tests/: conftest.py
(+104 files in other folders)
